--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
 <%= @user.username %>
+<%= form_for @events do |f| %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
+    <%= f.label :date %><br>
+    <%= f.text_field :date %>
+    <%= f.label :start_time %><br>
+    <%= f.text_field :start_time %>
+    <%= f.label :end_time %><br>
+    <%= f.text_field :end_time %>
+
+    <%=f.submit "Create Event"%>
+<% end %>
