--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,18 @@
-<%= @user.username %>
-<%= form_for @events do |f| %>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-    <%= f.label :date %><br>
-    <%= f.text_field :date %>
-    <%= f.label :start_time %><br>
-    <%= f.text_field :start_time %>
-    <%= f.label :end_time %><br>
-    <%= f.text_field :end_time %>
+<h1><%= @user.username %>'s Calendar will be Here! </h1>
+<hr>
+<hr>
+
+<%= form_for(@event) do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %><br>
+    <%= f.label :description %>
+    <%= f.text_field :description %><br>
+    <%= f.label :date %>
+    <%= f.text_field :date %><br>
+    <%= f.label :start_time %>
+    <%= f.text_field :start_time %><br>
+    <%= f.label :end_time %>
+    <%= f.text_field :end_time %><br>
 
     <%=f.submit "Create Event"%>
 <% end %>
