--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,55 @@
-<h1><%= @user.username %>'s Calendar will be Here! </h1>
+<h1> Month </h1>
+</p><%= @user.username %>'s calendar </p>
 <hr>
 <hr>
+<% stylesheet_link_tag "/calendar" %>
+<ul class="weekdays">
+  <li>Mon</li>
+  <li>Tue</li>
+  <li>Wed</li>
+  <li>Thu</li>
+  <li>Fri</li>
+  <li>Sat</li>
+  <li>Sun</li>
+</ul>
 
+<ul class="days">  
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+  <li>6</li>
+  <li>7</li>
+  <li>8</li>
+  <li>9</li>
+  <li><span class="active">10</span></li>
+  <li>11</li>
+  <li>12</li>
+  <li>13</li>
+  <li>14</li>
+  <li>15</li>
+  <li>16</li>
+  <li>17</li>
+  <li>18</li>
+  <li>19</li>
+  <li>20</li>
+  <li>21</li>
+  <li>22</li>
+  <li>23</li>
+  <li>24</li>
+  <li>25</li>
+  <li>26</li>
+  <li>27</li>
+  <li>28</li>
+  <li>29</li>
+  <li>30</li>
+  <li>31</li>
+</ul>
+
+<hr>
+<hr>
+<div class="new_event_form">
 <%= form_for(@event) do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %><br>
@@ -16,3 +64,4 @@
 
     <%=f.submit "Create Event"%>
 <% end %>
+</div> 
