debugged event creation related to user and date

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,7 +56,7 @@
     <%= f.label :description %>
     <%= f.text_field :description %><br>
     <%= f.label :date %>
-    <%= f.text_field :date %><br>
+    <%= f.date_select :date %><br>
     <%= f.label :start_time %>
     <%= f.text_field :start_time %><br>
     <%= f.label :end_time %>
