--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'POST'}) do %>
   <input type="submit" value="Log Out">
   <% end %>
-<h1> Month </h1>
+<h1 class="month_title"> Month </h1>
 </p><%= @user.username %>'s calendar </p>
 <hr>
 <hr>
