--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -3,8 +3,7 @@
     <%= f.text_field :title %><br>
     <%= f.label :description %>
     <%= f.text_field :description %><br>
-    <%= f.label :date %>
-    <%= f.date_select :date %><br>
+
     <%= f.label :start_time %>
     <%= f.text_field :start_time %><br>
     <%= f.label :end_time %>
@@ -12,3 +11,6 @@
 
     <%=f.submit "Create Event"%>
 <% end %>
+
+# <--     <%= f.label :date %>
+# <%= f.date_select :date %><br> --> 
