--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -69,3 +69,14 @@
 <% end %>
 </div> 
 
+<div class="new_task_form">
+<%= form_for(@task) do |f| %>
+    <%= f.label :event_id %>
+    <%= f.collection_select :event_id, Event.all, :id, :title, {:prompt => "Select Related Event"}%><br>
+    <%= f.label :description %>
+    <%= f.text_field :description %><br>
+    <%= f.label :status %>
+    <%= f.text_field :status %><br>
+    <%=f.submit "Create Task"%>
+<% end %>
+</div> 
