--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -22,6 +22,10 @@
     text-align: center;
 }
 
+.new_task_form {
+    text-align: center;
+} 
+
 h1.month_title {
     font-size: 60px;
     text-align: center;
