--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
 
 <hr>
 <hr>
-<div class="new_event_form">
+<div class="new_event_form fields_with_errors">
 <%= form_for(@event) do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title %><br>
@@ -69,7 +69,7 @@
 <% end %>
 </div> 
 
-<div class="new_task_form">
+<div class="new_task_form fields_with_errors">
 <%= form_for(@task) do |f| %>
     <%= f.label :event_id %>
     <%= f.collection_select :event_id, Event.all, :id, :title, {:prompt => "Select Related Event"}%><br>
