debugged task create action and created task show view

--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -36,3 +36,9 @@ h1.month_title {
 * {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
+
+h2.home_page{
+    text-align:center;
+    background-color: beige;
+    padding: 5px 5px;
+}
