--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -42,3 +42,22 @@ h2.home_page{
     background-color: beige;
     padding: 5px 5px;
 }
+
+a:link, a:visited {
+    background-color: #6666ff;
+    color: white;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 20px;
+    
+}
+
+.show_content{
+    text-align: center;
+}
+
+a:hover, a:active {
+    background-color: #000066;
+}
