--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <div>
+            <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %><br>
+
+  <div>
     <%= yield %>
+  
   </body>
 </html>
