--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,9 +1,11 @@
+<div class="edit_event_form">
 <%= form_for(@event) do |f| %>
+    <%= f.label :date_object %>
+    <%= f.date_select :date_object%><br>
     <%= f.label :title %>
     <%= f.text_field :title %><br>
     <%= f.label :description %>
     <%= f.text_field :description %><br>
-
     <%= f.label :start_time %>
     <%= f.text_field :start_time %><br>
     <%= f.label :end_time %>
@@ -11,6 +13,4 @@
 
     <%=f.submit "Create Event"%>
 <% end %>
-
-# <--     <%= f.label :date %>
-# <%= f.date_select :date %><br> --> 
+</div>
