--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -1,3 +1,19 @@
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    grid-template-rows: 100px 100px 100px 100px 100px;
+    grid-gap: 2px;
+    background-color: #2196F3;
+    padding: 10px;
+  }
+  .grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: top-left;
+    font-size: 20px;
+  }
+
+
 .weekdays {
     margin: 0;
     padding: 10px 0;
