--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -15,6 +15,7 @@
 
 
 .weekdays {
+    font-size: 20px;
     margin: 0;
     padding: 10px 0;
     background-color: rgb(215, 231, 211);
@@ -22,7 +23,7 @@
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color: rgb(88, 140, 230);
+    color:#6666ff;
     text-align: center;
 }
 
@@ -50,7 +51,7 @@ h1.month_title {
 }
 
 * {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria
 }
 
 h2.home_page{
