--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
 
   <body>
   <div>
-            <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %><br>
+            <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+            <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'POST'}) do %>
+              <input type="submit" value="Log Out">
+              <% end %>
 
   <div>
     <%= yield %>
