--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <h1> The Week Ahead </h1>
 <ul>
-<% @events.each do |e| %>
+<% @events.uniq.each do |e| %>
     <li><%= e.date %> - <%= e.title %> </li>
         <ul>
             <% e.tasks.each do |t| %>
