--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,10 +49,10 @@
 
 <h2 class="home_page">Add a Task</h2>
 
-<div class="new_task_form fields_with_errors">
+<div class="new_task_form">
   <%= form_for(@task) do |f| %>
       <%= f.label :event_id %>
-      <%= f.collection_select :event_id, Event.all, :id, :title, {:prompt => "Select Related Event"}%><br>
+      <%= f.collection_select :event_id, current_user.events, :id, :title, {:prompt => "Select Related Event"}%><br>
       <%= f.label :description %>
       <%= f.text_field :description %><br>
       <%= f.label :status %>
