--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -3,11 +3,11 @@
     grid-template-columns: auto auto auto auto auto auto auto;
     grid-template-rows: 100px 100px 100px 100px 100px;
     grid-gap: 2px;
-    background-color: #2196F3;
+    background-color: #272838;
     padding: 10px;
   }
   .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #989FCE;
     border: 1px solid black;
     text-align: top-left;
     font-size: 20px;
@@ -18,12 +18,12 @@
     font-size: 20px;
     margin: 0;
     padding: 10px 0;
-    background-color: rgb(215, 231, 211);
+    background-color: #5D536B;
 }
 .weekdays li {
     display: inline-block;
     width: 13.6%;
-    color:#6666ff;
+    color:989FCE;
     text-align: center;
 }
 
@@ -46,8 +46,9 @@
 h1.month_title {
     font-size: 60px;
     text-align: center;
-    padding-top: 20px;
-    background-color: darkgrey;
+    padding: 10px 10px;
+    background-color: #7D6B91;
+    color:black;
 }
 
 * {
@@ -56,18 +57,19 @@ h1.month_title {
 
 h2.home_page{
     text-align:center;
-    background-color: beige;
+    background-color: #347FC4;
     padding: 5px 5px;
 }
 
 a:link, a:visited {
-    background-color: #6666ff;
-    color: white;
-    padding: 14px 20px;
+    font-size: 16px;
+    background-color: #347FC4;
+    color:black;
+    padding: 14px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    border-radius: 20px;
+    border-radius: 10px;
     
 }
 
@@ -76,7 +78,8 @@ a:link, a:visited {
 }
 
 a:hover, a:active {
-    background-color: #000066;
+    background-color: #989FCE;
+    display: inline-block;
 }
 .field_with_errors {
     text-align: center;
