--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,8 @@
 <% while i <= days_in_month %> 
   <div class="<%= starting_div_class + i %>"><%= i %>
  
-    <% if Event.found_event(starting_div_class + i) %>
-      <ul><% Event.found_event(starting_div_class + i).each do |event| %>
+    <% if Event.found_event(starting_div_class + i, current_user) %>
+      <ul><% Event.found_event(starting_div_class + i, current_user).each do |event| %>
         <li><%= event.title %></li>
       <% end %>
       </ul>
