--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "back to report", events_path %>
 <%= link_to "Back", user_path(@task.user_id) %>
 <div class="show_content">
 TASK SHOW <br>
