nested edit task form complete

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,12 +1,13 @@
+<div class="show_content week_ahead">
 <h1> The Week Ahead </h1>
 <ul>
 <% @events.uniq.each do |e| %>
     <li><%= e.date %> - <%= link_to e.title, event_path(e) %> </li>
         <ul>
             <% e.tasks.each do |t| %>
-                <li><%= link_to t.description, event_task_path(e,t) %></li>
+                <li><%= t.description %></li>
                 <% end %>
         </ul>
     <% end %>
 </ul> 
-
+</div>
