--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,14 @@
-<%= link_to "back to report", events_path %>
-<%= link_to "Back", user_path(@task.user_id) %>
-<div class="show_content">
-TASK SHOW <br>
 
-To Do: <p><%= @task.description %></p><br>
-This task is <%= @task.status %><br>
-See all tasks related to <%= link_to @task.event.title, event_path(@task.event)%>
+<%= link_to "Home", user_path(@task.user_id) %>
+<%= link_to "Edit this Task", edit_event_task_path(@task.event, @task)%>
+<div class="show_content">
+<h1> <%= @task.description %></h1>
+This task is <%= @task.status %> 
+
+<h3> Current To Do List for <%=@event.title%></h3>
+<ul>
+    <% @event.tasks.each do |t| %>
+         <li><%= t.description%></li>
+    <% end %>
+</ul>
 </div>
