--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <input type="submit" value="Log Out">
     <% end %> 
     <br>
-      <%= link_to "Continue with Google", "/auth/google_oauth2", id: "sign_in"  %>
+      <%= link_to "Continue with Google", "/auth/google_oauth2", id: "sign_in" if !logged_in? %>
     <br>
 
   <div>
