logic for error messages on signup screen working

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,10 +5,10 @@
 <div class="week_ahead">
 <ul>
 <% @events.uniq.each do |e| %>
-    <li><%= e.date_object.dayname %> - <%= link_to e.title, event_path(e) %> </li>
+    <li><%= e.date%> - <%= link_to e.title, event_path(e) %> </li>
         <ul>
             <% e.tasks.each do |t| %>
-                <li><%= t.description %></li>
+                <li><%= link_to t.description, event_task_path(e,t) %></li>
             <% end %>
         </ul>
     <% end %>
