--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,3 +9,15 @@
   
     <%= f.submit "Sign up" %>
   <% end %>
+
+  <% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this account from being created:</h2>
+ 
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
